--- a/science.css
+++ b/science.css
@@ -10,13 +10,74 @@
     #logo{
         display: none;
     }
+    .form2{
+        display: inline !important;
+
+    }
+    #smallDiv{
+        display: inline !important;
+        width: 60%;
+      
+    }
+}
+
+@media only screen and (min-width:450px) and (max-width: 964px){
+    #nav2div{
+        display: none;
+    }
+    #nav1btn{
+        display: none;
+    }
+    #form2{
+        display: inline !important;
+
+    }
+
     
+
+}
+#form2{
+    display: none;
+}
+h4{
+    font-family: 'Ruwudu', serif;
+    margin-top:10px;
+    text-decoration: underline;
+}
+.options{
+cursor: pointer;
 }
 
-.options:hover{
-    cursor: pointer;
-}
 
+#mini{
+    background-image: url(blur1.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* width: 100vw; */
+    height: 100vh;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    /* background-repeat: */
+    color: white;
+    flex-direction: column;
+}
+#mini1{
+    position: relative;
+    top: 100px;
+    /* background-color: red; */
+}
+#mini2{
+    position: relative;
+    top: 100px;
+    /* background-color: blue;/ */
+    text-align: end;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    font-size: 1.1rem;
+    opacity: 0.4;
+}
 
 /*  footer */
 
