--- a/style.css
+++ b/style.css
@@ -65,14 +65,18 @@ cursor: pointer;
 #mini1{
     position: relative;
     top: 100px;
-    background-color: red;
+    /* background-color: red; */
 }
 #mini2{
     position: relative;
     top: 100px;
-    background-color: blue;
+    /* background-color: blue;/ */
     text-align: end;
     width: 30%;
+    display: flex;
+    justify-content: center;
+    font-size: 1.1rem;
+    opacity: 0.4;
 }
 
 /*  footer */
